sort.basic.lessons.sort.basic.gnome.AlgGnomeSort.scala.error
AlgGnomeSort:3: error: not found: value i
  i = 1
  ^AlgGnomeSort:5: error: not found: value i
    if(i==0){
       ^AlgGnomeSort:6: error: not found: value i
      i+=1
      ^AlgGnomeSort:8: error: not found: value i
    if(plusPetit(i,i+1)){
                 ^AlgGnomeSort:8: error: not found: value i
    if(plusPetit(i,i+1)){
                   ^AlgGnomeSort:9: error: not found: value i
      i+=1
      ^AlgGnomeSort:11: error: not found: value i
      echange(i,i+1)
              ^AlgGnomeSort:11: error: not found: value i
      echange(i,i+1)
                ^AlgGnomeSort:12: error: not found: value i
      i-=1
      ^AlgGnomeSort:15: error: not found: value i
  }while(i<getNombreValeurs()-1)
         ^