sort.basic.lessons.sort.basic.gnome.AlgGnomeSort.scala.code
def gnomeSort() {
  i = 1
  do {
    if(i==0){
      i+=1
    }
    if(plusPetit(i,i+1)){
      i+=1
    }else{
      echange(i,i+1)
      i-=1
    }
    
  }while(i<getNombreValeurs()-1)
}